--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,8 @@
 body {
     margin: 0;
     font-family: 'Inter', sans-serif;
+    height: 100vh;
+    background-color: #282D35;
 }
 
 .navbar {
@@ -34,4 +36,33 @@ body {
 .navbar img {
     height: 30px;
     margin-right: 7px
+}
+
+.main-section{
+    padding: 57px 27px;
+    color: white;
+    background-image: url(./images/react-icon-large.png);
+    background-repeat: no-repeat;
+    background-position: right 75%;
+}
+
+.main-section h1{
+    margin: 0;
+    font-size: 39px;
+    letter-spacing: -0.05rem;
+}
+
+.main-section ul {
+    margin-top: 46px;
+    max-width: 400px;
+}
+
+.main-section ul > li {
+    line-height: 19px;
+    padding-block: 10px;
+}
+
+.main-section ul > li::marker{
+    font-size: 1.4rem;
+    color: #61DAFB;
 }
